[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Block.png" type="Texture" id=1]
[ext_resource path="res://Moving/Ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Hit2.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Hit3.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Hit1.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Ball" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2147483659
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Hit1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
